# coffee

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py  admin_order.py  auth.py  cart.py  category.py  order.py  product.py
app/base/: base_model.py  base_response.py  uuid_generator.py
app/core/: config.py  db.py  redis.py
app/models/: __init__.py  cart.py  category.py  info.py  message.py  order.py  order_item.py  product.py  user.py
app/query/: admin_order.py  cart.py  category.py  order.py  products.py  user.py
app/schemas/: auth.py  cart.py  category.py  message.py  order.py  paggination.py  product.py  user.py
app/services/: auth.py  chat.py  email.py  permission.py  redis.py  security.py  user.py
app/tasks/: __init__.py  email_task.py  profile_task.py
app/templates/: email_verification.html  reset_password.html
app/workers/: celery.py
migrations/: env.py
migrations/versions/: ca00fcd430c4_initial.py  ee4c613da290_initial.py
scripts/: celery.sh  celery_beat.sh  entrypoint.sh
